--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
+}
+
+#logo_appbar {
+  width: 56px;
+  height: 56px;
 }
 
 section {
@@ -26,6 +32,7 @@ section > .showcase {
   display: flex;
   gap: var(--spacing-sm);
   align-items: center;
+  flex-wrap: wrap;
 }
 
 section > .showcase.column {
