--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -1,6 +1,6 @@
 @use '../mixin';
 
-.MaterialButton {
+%button-style {
   display: inline-flex;
   justify-content: center;
   align-items: center;
@@ -43,53 +43,58 @@
       opacity: 0.38;
     }
   }
+}
 
-  &.variant {
-    &-elevated {
+.material-button {
+  &-elevated {
+    @extend %button-style;
+    box-shadow: var(--elevation-1);
+    background-color: var(--color-surface-variant);
+    color: var(--color-primary);
+
+    &:hover {
+      box-shadow: var(--elevation-2);
+    }
+  }
+
+  &-filled {
+    @extend %button-style;
+    background-color: var(--color-primary);
+    color: var(--color-on-primary);
+
+    &:hover {
       box-shadow: var(--elevation-1);
-      background-color: var(--color-surface-variant);
-      color: var(--color-primary);
-
-      &:hover {
-        box-shadow: var(--elevation-2);
-      }
     }
+  }
 
-    &-filled {
-      background-color: var(--color-primary);
-      color: var(--color-on-primary);
+  &-tonal {
+    @extend %button-style;
+    background-color: var(--color-secondary-container);
+    color: var(--color-on-secondary-container);
 
-      &:hover {
-        box-shadow: var(--elevation-1);
-      }
+    &:hover {
+      box-shadow: var(--elevation-1);
     }
+  }
 
-    &-tonal {
-      background-color: var(--color-secondary-container);
-      color: var(--color-on-secondary-container);
+  &-outlined {
+    @extend %button-style;
+    border: 1px solid var(--color-outline);
+    color: var(--color-primary);
 
-      &:hover {
-        box-shadow: var(--elevation-1);
-      }
+    &:disabled {
+      background-color: transparent;
+      border-color: rgba(22, 22, 22, 0.12);
     }
+  }
 
-    &-outlined {
-      border: 1px solid var(--color-outline);
-      color: var(--color-primary);
+  &-text {
+    @extend %button-style;
+    color: var(--color-primary);
+    padding-inline: var(--spacing-lg);
 
-      &:disabled {
-        background-color: transparent;
-        border-color: rgba(22, 22, 22, 0.12);
-      }
-    }
-
-    &-text {
-      color: var(--color-primary);
-      padding-inline: var(--spacing-lg);
-
-      &:disabled {
-        background-color: transparent;
-      }
+    &:disabled {
+      background-color: transparent;
     }
   }
 }
