--- a/src/App.css
+++ b/src/App.css
@@ -10,14 +10,10 @@
   height: 56px;
 }
 
-section {
-  margin: 0 auto;
-  width: 100%;
-  max-width: var(--content-max-width);
+section:not(.material-grid) {
   display: flex;
   flex-direction: column;
-  padding-inline: var(--spacing-xl);
-  padding-block: var(--spacing-xl);
+  width: 100%;
   gap: var(--spacing-lg);
 }
 
