--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,12 @@
 #root {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   width: 100%;
+}
+
+@media screen and (min-width: 600px) {
+  #root {
+    display: grid;
+    grid-template-columns: minmax(80px, 96px) auto;
+  }
 }
 
 #logo_appbar {
