--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,17 @@
   width: 100%;
 }
 
+@media screen and (max-width: 599px) {
+  #root {
+    display: flex;
+    flex-direction: column;
+  }
+
+  main {
+    min-height: calc(100dvh - 80px);
+  }
+}
+
 @media screen and (min-width: 600px) {
   #root {
     display: grid;
