feat: Navdrawer and Divider components
Close issues #8, #12 and #16

--- a/src/App.css
+++ b/src/App.css
@@ -13,10 +13,17 @@
   }
 }
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 600px) and (max-width: 1199px) {
   #root {
     display: grid;
     grid-template-columns: minmax(80px, 96px) auto;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  #root {
+    display: grid;
+    grid-template-columns: 360px auto;
   }
 }
 
