--- a/src/styles/components/_appbar.scss
+++ b/src/styles/components/_appbar.scss
@@ -18,7 +18,7 @@
       box-shadow: var(--elevation-2);
 
       &:not([data-color]) {
-        background-color: var(--color-surface-variant);
+        background-color: var(--color-surface-container);
       }
     }
   }
