--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -9,7 +9,7 @@
   position: sticky;
   bottom: 0;
   left: 0;
-  background-color: var(--color-surface-variant);
+  background-color: var(--color-surface-container);
   color: var(--color-on-surface-variant);
   padding-block-start: var(--spacing-md);
   padding-block-end: var(--spacing-lg);
