--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -49,7 +49,7 @@
   &-elevated {
     @extend %button-style;
     box-shadow: var(--elevation-1);
-    background-color: var(--color-surface-variant);
+    background-color: var(--color-surface-container-low);
     color: var(--color-primary);
 
     &:hover {
