--- a/src/styles/components/_flexbox.scss
+++ b/src/styles/components/_flexbox.scss
@@ -1,4 +1,6 @@
 @use '../mixin';
+@use '../spacing';
+@use '../max-content';
 
 @mixin flex-direction-rules($breakpoint) {
   &[data-direction-#{$breakpoint}='row'] {
@@ -59,74 +61,31 @@
 
 .material-flexbox {
   display: flex;
+  @extend %spacing-rules;
+  @extend %max-content-styles;
 
   @media screen and (min-width: 0) {
     @include flex-direction-rules('compact');
     @include flex-align-rules('compact');
-    @include mixin.spacing-rules('compact', 'gap');
-    @include mixin.spacing-rules('compact', 'column-gap');
-    @include mixin.spacing-rules('compact', 'row-gap');
-    @include mixin.spacing-rules('compact', 'padding');
-    @include mixin.spacing-rules('compact', 'padding-block');
-    @include mixin.spacing-rules('compact', 'padding-inline');
-    @include mixin.spacing-rules('compact', 'margin', 1);
-    @include mixin.spacing-rules('compact', 'margin-block', 1);
-    @include mixin.spacing-rules('compact', 'margin-inline', 1);
   }
 
   @media screen and (min-width: 600px) {
     @include flex-direction-rules('medium');
     @include flex-align-rules('medium');
-    @include mixin.spacing-rules('medium', 'gap');
-    @include mixin.spacing-rules('medium', 'column-gap');
-    @include mixin.spacing-rules('medium', 'row-gap');
-    @include mixin.spacing-rules('medium', 'padding');
-    @include mixin.spacing-rules('medium', 'padding-block');
-    @include mixin.spacing-rules('medium', 'padding-inline');
-    @include mixin.spacing-rules('medium', 'margin', 1);
-    @include mixin.spacing-rules('medium', 'margin-block', 1);
-    @include mixin.spacing-rules('medium', 'margin-inline', 1);
   }
 
   @media screen and (min-width: 840px) {
     @include flex-direction-rules('expanded');
     @include flex-align-rules('expanded');
-    @include mixin.spacing-rules('expanded', 'gap');
-    @include mixin.spacing-rules('expanded', 'column-gap');
-    @include mixin.spacing-rules('expanded', 'row-gap');
-    @include mixin.spacing-rules('expanded', 'padding');
-    @include mixin.spacing-rules('expanded', 'padding-block');
-    @include mixin.spacing-rules('expanded', 'padding-inline');
-    @include mixin.spacing-rules('margin', 'margin', 1);
-    @include mixin.spacing-rules('margin', 'margin-block', 1);
-    @include mixin.spacing-rules('margin', 'margin-inline', 1);
   }
 
   @media screen and (min-width: 1200px) {
     @include flex-direction-rules('large');
     @include flex-align-rules('large');
-    @include mixin.spacing-rules('large', 'gap');
-    @include mixin.spacing-rules('large', 'column-gap');
-    @include mixin.spacing-rules('large', 'row-gap');
-    @include mixin.spacing-rules('large', 'padding');
-    @include mixin.spacing-rules('large', 'padding-block');
-    @include mixin.spacing-rules('large', 'padding-inline');
-    @include mixin.spacing-rules('large', 'margin', 1);
-    @include mixin.spacing-rules('large', 'margin-block', 1);
-    @include mixin.spacing-rules('large', 'margin-inline', 1);
   }
 
   @media screen and (min-width: 1400px) {
     @include flex-direction-rules('xlarge');
     @include flex-align-rules('xlarge');
-    @include mixin.spacing-rules('xlarge', 'gap');
-    @include mixin.spacing-rules('xlarge', 'column-gap');
-    @include mixin.spacing-rules('xlarge', 'row-gap');
-    @include mixin.spacing-rules('xlarge', 'padding');
-    @include mixin.spacing-rules('xlarge', 'padding-block');
-    @include mixin.spacing-rules('xlarge', 'padding-inline');
-    @include mixin.spacing-rules('xlarge', 'margin', 1);
-    @include mixin.spacing-rules('xlarge', 'margin-block', 1);
-    @include mixin.spacing-rules('xlarge', 'margin-inline', 1);
   }
 }
