--- a/src/styles/components/_grid.scss
+++ b/src/styles/components/_grid.scss
@@ -1,7 +1,9 @@
 @use '../mixin';
+@use '../spacing';
+@use '../max-content';
 
-@mixin grid-item-rules($cols, $sizeName) {
-  @for $i from 1 to $cols {
+@mixin grid-item-rules($sizeName) {
+  @for $i from 1 to 13 {
     > [data-grid-#{$sizeName}='#{$i}'] {
       grid-column: auto / span #{$i};
     }
@@ -13,79 +15,29 @@
   width: 100%;
   max-width: var(--content-max-width);
   margin: 0 auto;
-
-  &[data-fluid] {
-    max-width: unset;
-  }
+  grid-template-columns: repeat(12, 1fr);
+  @extend %spacing-rules;
+  @extend %max-content-styles;
 
   @media screen and (min-width: 0) {
-    grid-template-columns: repeat(4, 1fr);
-
-    @include mixin.spacing-rules('compact', 'gap');
-    @include mixin.spacing-rules('compact', 'column-gap');
-    @include mixin.spacing-rules('compact', 'row-gap');
-    @include mixin.spacing-rules('compact', 'padding');
-    @include mixin.spacing-rules('compact', 'padding-block');
-    @include mixin.spacing-rules('compact', 'padding-inline');
-    @include mixin.spacing-rules('compact', 'margin', 1);
-    @include mixin.spacing-rules('compact', 'margin-block', 1);
-    @include mixin.spacing-rules('compact', 'margin-inline', 1);
-    @include grid-item-rules(5, 'compact');
+    @include grid-item-rules('compact');
   }
 
   @media screen and (min-width: 600px) {
-    grid-template-columns: repeat(8, 1fr);
-
-    @include mixin.spacing-rules('medium', 'gap');
-    @include mixin.spacing-rules('medium', 'column-gap');
-    @include mixin.spacing-rules('medium', 'row-gap');
-    @include mixin.spacing-rules('medium', 'padding');
-    @include mixin.spacing-rules('medium', 'padding-block');
-    @include mixin.spacing-rules('medium', 'padding-inline');
-    @include mixin.spacing-rules('medium', 'margin', 1);
-    @include mixin.spacing-rules('medium', 'margin-block', 1);
-    @include mixin.spacing-rules('medium', 'margin-inline', 1);
-    @include grid-item-rules(9, 'medium');
+    @include grid-item-rules('medium');
   }
 
   @media screen and (min-width: 840px) {
     grid-template-columns: repeat(12, 1fr);
 
-    @include mixin.spacing-rules('expanded', 'gap');
-    @include mixin.spacing-rules('expanded', 'column-gap');
-    @include mixin.spacing-rules('expanded', 'row-gap');
-    @include mixin.spacing-rules('expanded', 'padding');
-    @include mixin.spacing-rules('expanded', 'padding-block');
-    @include mixin.spacing-rules('expanded', 'padding-inline');
-    @include mixin.spacing-rules('margin', 'margin', 1);
-    @include mixin.spacing-rules('margin', 'margin-block', 1);
-    @include mixin.spacing-rules('margin', 'margin-inline', 1);
-    @include grid-item-rules(13, 'expanded');
+    @include grid-item-rules('expanded');
   }
 
   @media screen and (min-width: 1200px) {
-    @include mixin.spacing-rules('large', 'gap');
-    @include mixin.spacing-rules('large', 'column-gap');
-    @include mixin.spacing-rules('large', 'row-gap');
-    @include mixin.spacing-rules('large', 'padding');
-    @include mixin.spacing-rules('large', 'padding-block');
-    @include mixin.spacing-rules('large', 'padding-inline');
-    @include mixin.spacing-rules('large', 'margin', 1);
-    @include mixin.spacing-rules('large', 'margin-block', 1);
-    @include mixin.spacing-rules('large', 'margin-inline', 1);
-    @include grid-item-rules(13, 'large');
+    @include grid-item-rules('large');
   }
 
   @media screen and (min-width: 1400px) {
-    @include mixin.spacing-rules('xlarge', 'gap');
-    @include mixin.spacing-rules('xlarge', 'column-gap');
-    @include mixin.spacing-rules('xlarge', 'row-gap');
-    @include mixin.spacing-rules('xlarge', 'padding');
-    @include mixin.spacing-rules('xlarge', 'padding-block');
-    @include mixin.spacing-rules('xlarge', 'padding-inline');
-    @include mixin.spacing-rules('xlarge', 'margin', 1);
-    @include mixin.spacing-rules('xlarge', 'margin-block', 1);
-    @include mixin.spacing-rules('xlarge', 'margin-inline', 1);
-    @include grid-item-rules(13, 'xlarge');
+    @include grid-item-rules('xlarge');
   }
 }
