--- a/src/styles/components/_navdrawer.scss
+++ b/src/styles/components/_navdrawer.scss
@@ -15,6 +15,27 @@
   color: var(--color-on-surface-variant);
   padding-block: var(--spacing-xl);
 
+  @media screen and (min-width: 1200px) {
+    &::-webkit-scrollbar {
+      max-width: var(--spacing-sm);
+      max-height: var(--spacing-sm);
+    }
+
+    &::-webkit-scrollbar-track {
+      border-radius: var(--shape-sm);
+      background-color: var(--color-surface-container-lowest);
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background: var(--color-on-surface-variant);
+      border-radius: var(--shape-sm);
+
+      &:hover {
+        background: var(--color-secondary-container);
+      }
+    }
+  }
+
   &[popover] {
     background-color: var(--color-surface-container-low);
     box-shadow: var(--elevation-1);
